--- a/style.css
+++ b/style.css
@@ -3,33 +3,104 @@
     font-size: 16px;
   }
 }
-
 @media (min-width: 481px) {
   .wrap__title {
     font-size: 24px;
   }
 }
-
 @media (min-width: 641px) {
   .wrap__title {
     font-size: 30px;
   }
 }
-
 @media (min-width: 961px) {
   .wrap__title {
     font-size: 36px;
   }
 }
-
 @media (min-width: 1025px) {
   .wrap__title {
     font-size: 42px;
   }
 }
-
 @media (min-width: 1281px) {
   .wrap__title {
     font-size: 50px;
   }
+}
+
+.wrap {
+  margin-left: 70px;
+}
+#menu__toggle {
+  opacity: 0;
+}
+.menu__btn {
+  align-items: center;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #616161;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+.menu__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  left: -100%;
+  width: 300px;
+  height: 100%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  text-align: center;
+  background-color: #ECEFF1;
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+}
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: #333;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+}
+.menu__item:hover {
+  background-color: #CFD8DC;
+}
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+  visibility: visible;
+  left: 0;
 }
